--- a/mi-primera-app/src/App.css
+++ b/mi-primera-app/src/App.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Poppins', sans-serif;
+}
 
 .title {
     position: absolute;
@@ -10,4 +13,49 @@
 }
 .burger {
     width: 100%;
+}
+.title-cat {
+    text-align: center;
+    margin-top: 2rem;
+}
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding: 2rem;
+    gap: 1rem;
+}
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 18rem;
+    height: 28rem;
+    background: rgb(255, 255, 255);
+    box-shadow: 0.1em 0.1em 0.1em #00000015;
+    transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    border: rgb(250, 250, 250) 0.2em solid;
+}
+.img-prod {
+    width: auto;
+    height: 12rem;
+}
+.p-prod {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-align: center;
+}
+.btn-detail {
+    width: 6.5rem;
+    height: 1.8rem;
+    background-color: #9c27b0;
+    border: none;
+    color: white;
+    border-radius: 0.2rem;
+    font-weight: 500;
+}
+.btn-detail:hover {
+    cursor: pointer;
+    background-color: #9b27b0e1;
+    transition: 0.2s;
 }
