--- a/mi-primera-app/src/App.css
+++ b/mi-primera-app/src/App.css
@@ -14,10 +14,6 @@ body{
 .burger {
     width: 100%;
 }
-.title-cat {
-    text-align: center;
-    margin-top: 2rem;
-}
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -47,15 +43,130 @@ body{
 }
 .btn-detail {
     width: 6.5rem;
-    height: 1.8rem;
+    height: 1.6rem;
     background-color: #9c27b0;
     border: none;
     color: white;
     border-radius: 0.2rem;
     font-weight: 500;
+    text-decoration: none;
+    text-align: center;
+    font-size: 0.9rem;
+    padding-top: 0.2rem;
+    transition: 0.2s;
 }
 .btn-detail:hover {
     cursor: pointer;
     background-color: #9b27b0e1;
     transition: 0.2s;
+}
+.detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.img-detail {
+    width: 40%;
+    margin-bottom: 2rem;
+}
+.container-detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    border-top: 2px solid rgb(202, 198, 198);
+}
+.p-detail {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.add-cart {
+    background-color: #9c27b0;
+    border: none;
+    color: white;
+    width: 11rem;
+    height: 3rem;
+    font-size: 0.9rem;
+    font-weight: 500;
+    border-radius: 1.5rem;
+}
+.footer {
+    display: flex;
+    background-color: #070707;
+    height: 5rem;
+    margin-top: 5rem;
+    align-items: center;
+    justify-content: space-between;
+}
+.copyright {
+    color: white;
+    font-size: 0.7rem;
+    margin-left: 1rem;
+}
+.icons {
+    width: 3.5rem;
+}
+.container-load {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+    width: 100%;
+    height: 90%;
+    background-color: white;
+}
+#preloader {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+#loader {
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #9370DB;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+#loader:after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #FF00FF;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
+}
+@-webkit-keyframes spin {
+    0%   {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes spin {
+    0%   {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
