--- a/mi-primera-app/src/App.css
+++ b/mi-primera-app/src/App.css
@@ -89,6 +89,7 @@ body{
     font-size: 0.9rem;
     font-weight: 500;
     border-radius: 1.5rem;
+    margin-top: 1rem;
 }
 .footer {
     display: flex;
@@ -108,9 +109,9 @@ body{
 }
 .container-load {
     padding-top: 10rem;
-    padding-bottom: 10rem;
+    padding-bottom: 15rem;
     width: 100%;
-    height: 90%;
+    height: 10rem;
     background-color: white;
 }
 #preloader {
@@ -124,8 +125,8 @@ body{
     position: relative;
     left: 50%;
     top: 50%;
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     margin: -75px 0 0 -75px;
     border-radius: 50%;
     border: 3px solid transparent;
@@ -142,7 +143,7 @@ body{
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #FF00FF;
+    border-top-color: #9c27b0;
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
@@ -169,4 +170,26 @@ body{
         -ms-transform: rotate(360deg);
         transform: rotate(360deg);
     }
+}
+.item-count {
+    width: 5rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.btn-count {
+    cursor: pointer;
+    width: 1.3rem;
+    height: 1.3rem;
+    border: none;
+    background-color: #9c27b0;
+    color: white;
+    border-radius: 0.2rem;
+}
+.modal {
+    position: 'absolute';
+    top: '50%';
+    left: '50%';
+    transform: 'translate(-50%, -50%)';
+    width: 400;                      
 }
