--- a/mi-primera-app/src/App.css
+++ b/mi-primera-app/src/App.css
@@ -42,25 +42,33 @@ body{
     text-align: center;
 }
 .btn-detail {
-    width: 6.5rem;
-    height: 1.6rem;
+    display: flex;
+    width: 7rem;
+    height: 1.8rem;
     background-color: #9c27b0;
     border: none;
-    color: white;
-    border-radius: 0.2rem;
-    font-weight: 500;
-    text-decoration: none;
-    text-align: center;
-    font-size: 0.9rem;
+    border-radius: 1rem;
     padding-top: 0.2rem;
     transition: 0.2s;
+    text-decoration: none;
+    color: white;
 }
 .btn-detail:hover {
     cursor: pointer;
     background-color: #9b27b0e1;
     transition: 0.2s;
 }
+.btn-pdetail {
+    font-weight: 500;
+    text-decoration: none;
+    font-size: 0.9rem;
+    color: white;
+    text-align: center;
+    margin-left: 0.4rem;
+    margin-top: 0;
+}
 .detail {
+    padding-top: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -81,15 +89,22 @@ body{
     font-weight: 600;
 }
 .add-cart {
+    font-family: 'Poppins', sans-serif;
     background-color: #9c27b0;
     border: none;
     color: white;
     width: 11rem;
-    height: 3rem;
-    font-size: 0.9rem;
+    height: 2.8rem;
+    font-size: 0.85rem;
     font-weight: 500;
-    border-radius: 1.5rem;
+    border-radius: 1rem;
     margin-top: 1rem;
+    transition: 0.2s;
+}
+.add-cart:hover {
+    cursor: pointer;
+    background-color: #9b27b0e1;
+    transition: 0.2s;
 }
 .footer {
     display: flex;
@@ -267,4 +282,16 @@ body{
 }
 .close:hover {
     cursor: pointer;
+}
+.alert-clear {
+    margin: 12rem;
+    width: 12rem;
+    height: 2.5rem;
+    box-shadow: 0.1em 0.1em 0.5em #00000015;
+}
+.swal-clear {
+    z-index: 1500;
+}
+.swal-font {
+    font-family: 'Poppins', sans-serif;
 }
