--- a/mi-primera-app/src/App.css
+++ b/mi-primera-app/src/App.css
@@ -264,7 +264,7 @@ body{
 .btn-clear {
     font-family: 'Poppins', sans-serif;
     border-radius: 0.3rem;
-    margin-left: 15rem;
+    margin-left: 5rem;
     margin-top: 1rem;
     border: none;
     background-color: #9c27b0;
@@ -294,4 +294,192 @@ body{
 }
 .swal-font {
     font-family: 'Poppins', sans-serif;
+}
+.home-title {
+    font-size: 1.7rem;
+    padding: 1.5rem;
+}
+.img-novedad {
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
+    width: 22rem;
+    height: 22rem;
+}
+.p-novedad {
+    font-size: 0.9rem;
+    margin-left: 1rem;
+    width: 20.5rem;
+}
+.div-nov {
+    display: flex;
+    justify-content: space-around;
+}
+.novedad {
+    background-color: #e4e2e2;
+    width: 22rem;
+    border-radius: 2rem;
+}
+.btn-checkout {
+    font-family: 'Poppins', sans-serif;
+    border-radius: 0.3rem;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    border: none;
+    background-color: #9c27b0;
+    color: white;
+    height: 1.7rem;
+    width: 10rem;
+    transition: 0.2s;
+    font-size: 0.9rem;
+    text-decoration: none;
+    text-align: center;
+    font-weight: 400;
+    padding-top: 4px;
+}
+.btn-checkout:hover {
+    cursor: pointer;
+    background-color: #b94dcc;
+}
+.container-form {
+    padding-top: 5rem;
+}
+.title-form {
+    padding: 3rem;
+    font-size: 1.8rem;
+
+}
+.form {
+    display: flex;
+    flex-direction: column;
+    padding-left: 5rem;
+    padding-bottom: 5rem;
+    gap: 1rem;
+}
+.input {
+    width: 20rem;
+    height: 2rem;
+    border-radius: 0.2rem;
+    border: 2px solid #9c27b0;
+    font-size: 0.8rem;
+    padding-left: 1rem;
+}
+.input:focus {
+    outline: #9c27b0;
+}
+.btn-form {
+    font-family: 'Poppins', sans-serif;
+    border-radius: 0.3rem;
+    margin-top: 1rem;
+    border: none;
+    background-color: #9c27b0;
+    color: white;
+    height: 2rem;
+    width: 8rem;
+    transition: 0.2s;
+    font-size: 1rem;
+    font-weight: 500;
+}
+.btn-form:hover {
+    cursor: pointer;
+    background-color: #b94dcc;
+}
+.p-order {
+    padding-left: 4rem;
+}
+.btn-order {
+    margin-bottom: 13rem;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 0.3rem;
+    margin-left: 4rem;
+    margin-top: 2rem;
+    border: none;
+    background-color: #9c27b0;
+    color: white;
+    height: 2.5rem;
+    width: 12rem;
+    transition: 0.2s;
+    font-size: 1rem;
+    font-weight: 500;
+}
+.btn-order:hover {
+    cursor: pointer;
+    background-color: #b94dcc;
+}
+.container-login {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 25rem;
+    padding-top: 5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    height: 23rem;
+    box-shadow: 0.1em 0.1em 0.5em #00000015;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+}
+.btn-login {
+    margin-left: 6rem;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 0.3rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    border: none;
+    background-color: #9c27b0;
+    color: white;
+    height: 2.5rem;
+    width: 12rem;
+    transition: 0.2s;
+    font-size: 1rem;
+    font-weight: 500;
+}
+.flex {
+    display: flex;
+    justify-content: center;
+    padding-top: 5rem;
+}
+.container-formL {
+    display: flex;
+    justify-content: center;
+    width: 25rem;
+    background-color: #9c27b0;
+    height: 28rem;
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+    color: white;
+    box-shadow: 0.1em 0.1em 0.5em #00000015;
+}
+@media screen and (max-width: 548px) {
+    .flex{
+        flex-direction: column;
+        align-items: center;
+    }
+    .container-formL{
+        height: 10rem;
+        border-top-left-radius: 2rem;
+        border-top-right-radius: 2rem;
+        border-bottom-left-radius: 0;
+        width: 20rem;
+    }
+    .container-login {
+        width: 20rem;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 2rem;
+        border-bottom-left-radius: 2rem;
+        padding-top: 1rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+}
+.btn-transparent{
+    font-size: 0.8rem;
+    font-family: 'Poppins', sans-serif;
+    background-color: transparent;
+    color: black;
+    border: none;
+    padding-right: 1.5rem;
+
+}
+.btn-transparent:hover {
+    cursor: pointer;
 }
