--- a/mi-primera-app/src/components/Navbar/Navbar.css
+++ b/mi-primera-app/src/components/Navbar/Navbar.css
@@ -45,6 +45,31 @@
     width: 8rem;
     margin-left: 2rem;
 }
+.flex-user {
+    display: flex;
+}
+.user {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+}
+.close-sesion {
+    font-family: 'Poppins', sans-serif;
+    border-radius: 0.3rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    border: none;
+    background-color: #9c27b0;
+    color: white;
+    height: 2rem;
+    width: 8.5rem;
+    transition: 0.2s;
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+.close-sesion:hover {
+    cursor: pointer;
+    background-color: #b94dcc;
+}
 
 @media (max-width: 768px) {
     .items{
@@ -61,6 +86,7 @@
     }
     .items.open {
         transform: translateX(0) !important;
+        margin-top: 2rem;
     }
     .nav-toggle {
         display: flex !important;
